# osr-rover-code

./: .gitignore  .~lock.nodes3d0.txt#  .~lock.rscosts.txt#  field.ppm  result.ppm  vfield.pgm
osr/: package.xml
osr/scripts/: compute_status.py  joystick.py  motor_controller.py  motor_controller_v2.py  ocs.py  osr_tf_broadcaster.py  roboclaw_wrapper.py  roboclaw_wrapper_v2.py  robot.py  robot_v2.py  rover.py  rover_v2.py  test_roboclaw.py
osr/scripts/ocs/: frames.py  launch.py  machine.py  odomframe.py  rosctrl.py
osr_2dnav/: CMakeLists.txt  package.xml
osr_bringup/launch/: hardware.machine  imu.launch  imu_config.yaml  imu_pluginlists.yaml  joy.launch  kf.launch  machine_stats.launch  mc.launch  mount_usb.launch  ocs.launch  odom.launch  odom2.launch  osr copy.launch  osr.launch  osr_min.launch  osr_tf.launch  record.launch  robot.launch  rosbridge.launch  rs.launch  rsp.launch  rtabmap.launch  rtabmap_only.launch  rtabmap_osr.launch  unmount_usb.launch  xavier.launch  xavier_full.launch  xavier_mid.launch  xavier_min.launch  xavier_test.launch
osr_bringup/scripts/: launchOSR.sh  launchocs.sh  mount_usb.sh  osr_startup.service  setupEnvLocal.sh  setupEnvRemote.sh  setupEnvRemoteOCS.sh  setupEnvRemoteXPS.sh  setupEnvXavier.sh  unmount_usb.sh
osr_description/: CMakeLists.txt  package.xml
osr_description/launch/: osr_desc.launch  osr_desc_full.launch
osr_description/urdf/: osr_description copy.urdf  osr_description.urdf  osr_description_full.urdf
osr_msgs/: CMakeLists.txt
osr_msgs/msg/: CompStatus.msg  Encoder.msg  Joystick.msg  RunStop.msg
osr_odometry/: CMakeLists.txt  package.xml
osr_odometry/calibration/: odometry copy.json  odometry.json  odometry_orig.json
osr_odometry/scripts/: osr_odom.py  osr_odom_ackerman.py  osr_odom_ackerman2.py
osr_perf/: CMakeLists.txt  package.xml
osr_perf/include/: motorcontrollers.h  osr_mc_node.h  osr_node.h  roboclaw.h  robot.h  serial.h
osr_perf/src/: motorcontrollers.cpp  osr_mc_node.cpp  osr_node.cpp  roboclaw.cpp  robot.cpp  serial.cpp
osr_planner/: CMakeLists.txt  package.xml
osr_planner/cfg/: osr_planner.cfg
osr_planner/include/: Algorithm.h  AlgorithmStats.h  BucketedQueue.h  CollisionDetection.h  CollisionMap.h  Constants.h  Dubins.h  DynamicVoronoi.h  Gradient.h  HASAlgorithm.h  Helper.h  Heuristics.h  Lookup.h  Node2D.h  Node3D.h  Path.h  Planner.h  Point.h  PostSmoothing.h  Settings.h  Smoother.h  Vector2D.h  Visualization.h  VoronoiField.h
osr_planner/launch/: config.rviz  debug-osr.launch  debug.launch  manual.launch  poses.txt
osr_planner/maps/: osrmap.yaml  osrmap2.pgm  osrmap2.yaml  osrmap3.yaml  osrmap4.yaml  osrmap_octo.pgm  osrmap_octo.yaml  osrmap_prob.pgm  osrmap_prob.yaml
osr_planner/src/: Algorithm.cpp  BucketedQueue.cpp  CollisionDetection.cpp  CollisionMap.cpp  Dubins.cpp  DynamicVoronoi.cpp  HASAlgorithm.cpp  Heuristics.cpp  Node2D.cpp  Node3D.cpp  Path.cpp  Planner.cpp  PostSmoothing.cpp  Settings.cpp  Smoother.cpp  Visualization.cpp  VoronoiField.cpp  main.cpp
osr_planner/test/: points.txt  test.py  test2.py  test3.py
osr_planning/: CMakeLists.txt  package.xml
osr_planning/launch/: manual.launch
osr_planning/scripts/: bpqueue.py  collisiondetection.py  colorgradient.py  constants.py  dubins.py  dynamicvoronoi.py  hastar.py  helper.py  lookup.py  map.py  nodes.py  osr_planner.py  path.py  planner.py  smoother.py  tf_broadcaster.py  utils.py  vector.py  visualize.py
