<?xml version="1.0"?>
<package format="2">
  <name>osr_perf</name>
  <version>0.0.5</version>
  <description>C++ Implementation for open source rover</description>
  <buildtool_depend>catkin</buildtool_depend>

  <maintainer email="ljb2208@gmail.com">ljb</maintainer>

  <license>Apache 2</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>osr_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>serial</depend>

  <export>
  </export>
</package>
